@@ -4811,3 +4811,5 @@ Changelog for GXemul:
 		the SGI O2 emulation mode to match my real O2 (0x9004, 0x8078).
 20181120	Continuing on SGI O2 graphics: "overlays" (seem to always be
 		8 bits deep?).
+20181121	Getting rid of a hack in the O2 rendering code for "stipple
+		patterns", by looking at the "stipple mode" register.
